--- a/example/seed.yml
+++ b/example/seed.yml
@@ -1,5 +1,14 @@
 in:
   type: file
   path_prefix: "/Users/murata/repos/embulk-filter-query_string_ruby/example/csv/sample_"
+
+filters:
+  - type: query_string_ruby
+    column: query
+    query_params:
+      - {name: hoge, type: string}
+      - {name: fuga, type: long}
+      - {name: piyo, type: timestamp, format: '%Y-%m-%d'}
+
 out:
   type: stdout
